# cnc-turtlebots

./: .gitignore  README.md
ninja_recovery/: CMakeLists.txt  ninja_plugin.xml  package.xml
ninja_recovery/include/ninja_recovery/: ninja_recovery.h
ninja_recovery/src/: ninja_recovery.cpp
range_scan/: CMakeLists.txt  package.xml
range_scan/include/range_scan/: RangeScan.h
range_scan/src/: RangeScan.cpp
rfid_sensor/: CMakeLists.txt  package.xml
rfid_sensor/src/: rfidwriter.cpp
rfid_sensor/src/Debug/: makefile  objects.mk  phidget_rfid  rfidwriter.d  subdir.mk
slplanner/: CMakeLists.txt  package.xml  slp_plugin.xml
slplanner/include/: SimpleLocalPlanner.h
slplanner/src/: SimpleLocalPlanner.cpp
ttb_base/: CMakeLists.txt  package.xml
ttb_base/include/: Base.h
ttb_base/src/: Base.cpp
ttb_control/: CMakeLists.txt  package.xml  plugin.xml  setup.py
ttb_control/include/ttb_control/: Robot.h  TTBControl.h  flowlayout.h
ttb_control/scripts/: ttb_control
ttb_control/src/ttb_control/: Robot.cpp  TTBControl.cpp  flowlayout.cpp
ttb_control/ui/: ControlledRobotFlowTest.ui  ControlledTTBRobot.ui  RobotsControl2.ui  TTBControl.ui
ttb_expressions/: CMakeLists.txt  package.xml
ttb_expressions/autogenerated/include/: BehaviourCreator.h  ConditionCreator.h  ConstraintCreator.h  DomainBehaviour.h  DomainCondition.h  SolverType.h  UtilityFunctionCreator.h
ttb_expressions/autogenerated/include/Plans/: ChargeAndSimpleDriveTest1414681057676.h  TurtleGenericTestMaster1414681057676.h
ttb_expressions/autogenerated/include/ServiceRobots/: Charge1552996829354.h  Charge1553186270535.h  DriveSearchPattern.h  DriveToPOI.h  DriveToPOI1553186299639.h  DriveToWMsPOI.h  PickUp.h  PickUp1553186320902.h  PutDown1553186313956.h  Search1553186306469.h  Serve1552996823626.h  Serve1553186258644.h  ServeMaster1552995667134.h  ServeMaster1553184964252.h  Stop.h
ttb_expressions/autogenerated/include/TestPlans4Parsing/: ParsingTestMaster1554234501483.h
ttb_expressions/autogenerated/src/: BehaviourCreator.cpp  ConditionCreator.cpp  ConstraintCreator.cpp  DomainBehaviour.cpp  DomainCondition.cpp  UtilityFunctionCreator.cpp
ttb_expressions/autogenerated/src/Plans/: ChargeAndSimpleDriveTest1414681057676.cpp  TestPOI1454329810785.cpp  TurtleGenericTestMaster1414681057676.cpp  (+1 more)
ttb_msgs/: CMakeLists.txt  package.xml
ttb_msgs/msg/: AMCLPoseWrapped.msg  AnnotatedGrid.msg  DoorCmd.msg  DriveToPOI.msg  GoalWrapped.msg  GrabDropObject.msg  InitialPoseWrapped.msg  LogicalCamera.msg  LogicalCamera3D.msg  LogicalCamera3DArray.msg  LogicalCameraImage.msg  Model.msg  ObjectSize.msg  RFIDSensor.msg  ServeTask.msg  TopologicalInfo.msg
ttb_robot/: CMakeLists.txt  package.xml
ttb_robot/include/: Robot.h  TopologicalPathPlanner.h  TurtleBot.h
ttb_robot/include/robot/: Movement.h  SimulatedArm.h  Speech.h  TTBEnums.h
ttb_robot/src/: Movement.cpp  Robot.cpp  SimulatedArm.cpp  Speech.cpp  TopologicalPathPlanner.cpp  TurtleBot.cpp
ttb_rviz_plugin/: CMakeLists.txt  package.xml  plugin_description.xml  reload.sh
ttb_rviz_plugin/src/: LeonardoNavGoal.cpp  LeonardoNavGoal.h  LeonardoPoseEst.cpp  LeonardoPoseEst.h  MultibotTool.cpp  MultibotTool.h  RafaelNavGoal.cpp  RafaelNavGoal.h  RafaelPoseEst.cpp  RafaelPoseEst.h  RobotBox.cpp  RobotBox.h  TurtlePanel.cpp  TurtlePanel.h  teleop_panel.cpp
ttb_udp_proxy/: CMakeLists.txt  package.xml  relayMsgs.conf
ttb_udp_proxy/proxy_gen/: ros2udpProxy.cpp
ttb_worldmodel/: CMakeLists.txt  package.xml  wrappedRelayMsgs.conf
ttb_worldmodel/include/: Communication.h  DoorStateRecognition.h  Doors.h  InformationElement.h  LogicalCameraData.h  LogicalObject.h  POI.h  RFIDData.h  RawSensorData.h  RingBuffer.h  Robot.h  Robots.h  TTBWorldModel.h  TaskManager.h  TopologicalLocalization.h  TopologicalModel.h  WrappedMessageHandler.h  WumpusData.h
ttb_worldmodel/include/distributed_systems/: Area.h  AreaDoor.h  DistributedSystems.h  Door.h  Room.h  TopologicalPathPlanner.h
ttb_worldmodel/include/logicalCameraModel/: BlueBook.h  Box.h  CokeCan.h  ContaminatedArea.h  Cup.h  Door.h  Drill.h  Fire.h  GreenBook.h  Hammer.h  Landmark.h  LargeTable.h  LogicalObject.h  MediumTable.h  MonkeyWrench.h  RedBook.h  SmallTable.h  TrashCan.h  Victim.h
ttb_worldmodel/include/robotmovement/: RobotMovement.h
ttb_worldmodel/include/sharedworldmodel/: TTBSharedWorldModel.h
ttb_worldmodel/include/tasks/: DriveToTask.h  PickUpTask.h  PointOfInterest.h  PutDownTask.h  SearchTask.h  ServeTask.h
ttb_worldmodel/include/topology/: Area.h  Door.h  POI.h  Room.h  TopologicalDoor.h
ttb_worldmodel/include/ttb/: TTBWorldModel.h  WrappedMessageHandler.h
ttb_worldmodel/include/ttb_poi/: TTBPointOfInterests.h
ttb_worldmodel/src/: Communication.cpp  DoorStateRecognition.cpp  Doors.cpp  LogicalCameraData.cpp  LogicalObject.cpp  RFIDData.cpp  RawSensorData.cpp  Robot.cpp  Robots.cpp  TTBWorldModel.cpp  TaskManager.cpp  TopologicalInfoPublisher.cpp  TopologicalLocalization.cpp  TopologicalModel.cpp  WrappedMessageHandler.cpp  WumpusData.cpp
ttb_worldmodel/src/distributed_systems/: Area.cpp  AreaDoor.cpp  DistributedSystems.cpp  Door.cpp  Room.cpp  TopologicalPathPlanner.cpp
ttb_worldmodel/src/logicalCamaraModel/: Box.cpp  Fire.cpp  LogicalObject.cpp  Victim.cpp
ttb_worldmodel/src/logicalCameraModel/: BlueBook.cpp  Box.cpp  CokeCan.cpp  ContaminatedArea.cpp  Cup.cpp  Door.cpp  Drill.cpp  Fire.cpp  GreenBook.cpp  Hammer.cpp  Landmark.cpp  LargeTable.cpp  LogicalObject.cpp  MediumTable.cpp  MonkeyWrench.cpp  RedBook.cpp  SmallTable.cpp  TrashCan.cpp  Victim.cpp
ttb_worldmodel/src/robotmovement/: RobotMovement.cpp
ttb_worldmodel/src/sharedworldmodel/: TTBSharedWorldModel.cpp
ttb_worldmodel/src/tasks/: DriveToTask.cpp  PickUpTask.cpp  PutDownTask.cpp  SearchTask.cpp  ServeTask.cpp
ttb_worldmodel/src/topology/: Area.cpp  Door.cpp  POI.cpp  Room.cpp  TopologicalDoor.cpp
ttb_worldmodel/src/ttb/: TTBWorldModel.cpp
ttb_worldmodel/src/ttb_poi/: TTBPointOfInterests.cpp
voice/: CMakeLists.txt  package.xml
voice/cmake/: FindFlite.cmake
voice/src/: Voice.cpp
(+1108 files in other folders)
