<?xml version="1.0"?>
<package>
  <name>rfid_sensor</name>
  <version>0.0.0</version>
  <description>The rfid_sensor package</description>

  <maintainer email="me@you.com">Teamarbeit</maintainer>

  <license>MIT</license>

  <author email="me@you.com">Teamarbeit</author>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>message_generation</build_depend>
  <build_depend>system_config</build_depend>
  <build_depend>event_handling</build_depend>
  <build_depend>ttb_msgs</build_depend>
    
  <run_depend>message_runtime</run_depend>
  <run_depend>system_config</run_depend>
  <run_depend>event_handling</run_depend>
  <run_depend>ttb_msgs</run_depend>

  <test_depend>gtest</test_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
