<?xml version="1.0"?>
<package>
  <name>slplanner</name>
  <version>0.0.0</version>
  <description>The slplanner package</description>

  <maintainer email="opfer@vs.uni-kassel.de">Stephan Opfer</maintainer>

  <license>MIT</license>

  <author email="opfer@vs.uni-kassel.de">Stephan Opfer</author>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>nav_core</build_depend>
  <build_depend>costmap2d</build_depend>
  <build_depend>pluginlib</build_depend>
  <build_depend>base_local_planner</build_depend>
  <build_depend>geometry_msgs</build_depend>
  
  <run_depend>nav_core</run_depend>
  <run_depend>costmap2d</run_depend>
  <run_depend>pluginlib</run_depend>
  <run_depend>base_local_planner</run_depend>
  <run_depend>geometry_msgs</run_depend>

  <export>
    <nav_core plugin="${prefix}/slp_plugin.xml" />
  </export>
</package>
