<?xml version="1.0"?>
<package format="2">
  <name>ttb_base</name>
  <version>0.0.0</version>
  <description>The ttb_base package</description>

  <maintainer email="opfer@vs.uni-kassel.de">Stephan Opfer</maintainer>

  <license>MIT</license>

  <author email="opfer@vs.uni-kassel.de">Stephan Opfer</author>

  <buildtool_depend>catkin</buildtool_depend>
  
  <depend>alica_engine</depend>
  <depend>system_config</depend>
  <depend>autodiff</depend>
  <depend>roscpp</depend>
  <depend>ttb_expressions</depend>
  <depend>ttb_worldmodel</depend>
  <depend>message_generation</depend>
  <depend>alica_ros_proxy</depend>
  <depend>robot_control</depend>
  <depend>asp_solver_wrapper</depend>
  <depend>asp_solver</depend>
  <depend>agent_id</depend>
  <depend>alica_simple_solver</depend>

  <export>

  </export>
</package>
