<package format="2">
  <name>ttb_control</name>
  <version>0.0.1</version>
  <description>ttb_control provides a GUI plugin for receiving turtlebot specific robot data.</description>
  <maintainer email="opfer@vs.uni-kassel.de">Stephan Opfer</maintainer>

  <license>MIT</license>

  <author>Stephan Opfer</author>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>rqt_gui</depend>
  <depend>rqt_gui_cpp</depend>
  <depend>ttb_msgs</depend>
  <depend>process_manager</depend>
  <depend>robot_executable_meta_data</depend>
  <depend>alica_msgs</depend>


  <export>
    <rqt_gui plugin="${prefix}/plugin.xml"/>
  </export>
</package>
