<?xml version="1.0"?>
<package format="2">
  <name>ttb_expressions</name>
  <version>0.0.0</version>
  <description>The ttb_expressions package</description>

  <maintainer email="opfer@vs.uni-kassel.de">Stephan Opfer</maintainer>

  <license>MIT</license>

  <author email="opfer@vs.uni-kassel.de">Stephan Opfer</author>

  <buildtool_depend>catkin</buildtool_depend>
  
  <depend>alica_engine</depend>
  <depend>system_config</depend>
  <depend>roscpp</depend>
  <depend>ttb_worldmodel</depend>
  <depend>message_generation</depend>
  <depend>system_util</depend>
  <depend>autodiff</depend>
  <depend>ecl_geometry</depend>
  <depend>kobuki_dock_drive</depend>
  <depend>kdl_conversions</depend>
  <depend>sound_play</depend>
  <depend>asp_commons</depend>
  <depend>robot_control</depend>
  <depend>ttb_msgs</depend>
  <depend>asp_solver_wrapper</depend>
  <depend>asp_solver</depend>
  <depend>ttb_robot</depend>
  <depend>alica_simple_solver</depend>

  <export>
  </export>
</package>
