<?xml version="1.0"?>
<package>
  <name>ttb_msgs</name>
  <version>0.0.0</version>
  <description>The ttb_msgs package</description>

  <maintainer email="opfer@vs.uni-kassel.de">Stephan Opfer</maintainer>

  <license>MIT</license>

  <author email="opfer@vs.uni-kassel.de">Stephan Opfer</author>


  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>agent_id</build_depend>

  <run_depend>std_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>agent_id</run_depend>

  <export>
  </export>
</package>
