<?xml version="1.0"?>
<package format="2">
  <name>ttb_msgs</name>
  <version>0.0.0</version>
  <description>The ttb_msgs package</description>

  <maintainer email="opfer@vs.uni-kassel.de">Stephan Opfer</maintainer>

  <license>MIT</license>

  <author email="opfer@vs.uni-kassel.de">Stephan Opfer</author>


  <buildtool_depend>catkin</buildtool_depend>

  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>message_generation</depend>
  <depend>id_ros</depend>

  <exec_depend>message_runtime</exec_depend>

  <export>
  </export>
</package>
