<?xml version="1.0"?>
<package>
  <name>ttb_rviz_plugin</name>
  <version>0.0.0</version>
  <description>rviz plugin to send pose and navgoal messages to multiple robots</description>

  <maintainer email="paspartout@fogglabs.de">Phileas Vöcking</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>qtbase5-dev</build_depend>
  <build_depend>rviz</build_depend>

  <run_depend>libqt5-core</run_depend>
  <run_depend>libqt5-gui</run_depend>
  <run_depend>libqt5-widgets</run_depend>
  <run_depend>rviz</run_depend>

  <export>
      <rviz plugin="${prefix}/plugin_description.xml"/>
  </export>

</package>
