<?xml version="1.0"?>
<package>
  <name>ttb_worldmodel</name>
  <version>0.0.0</version>
  <description>The ttb_worldmodel package</description>

  <maintainer email="opfer@vs.uni-kassel.de">Stephan Opfer</maintainer>

  <license>MIT</license>

  <author email="opfer@vs.uni-kassel.de">Stephan Opfer</author>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>message_generation</build_depend>
  <build_depend>system_config</build_depend>
  <build_depend>alica_engine</build_depend>
  <build_depend>cnc_geometry</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>event_handling</build_depend>
  <build_depend>kobuki_msgs</build_depend>
  <build_depend>robot_control</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>ttb_msgs</build_depend>
  <build_depend>world_model</build_depend>

  <run_depend>message_runtime</run_depend>
  <run_depend>system_config</run_depend>
  <run_depend>alica_engine</run_depend>
  <run_depend>cnc_geometry</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>event_handling</run_depend>
  <run_depend>kobuki_msgs</run_depend>
  <run_depend>robot_control</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>ttb_msgs</run_depend>
  <run_depend>world_model</run_depend>

  <test_depend>gtest</test_depend>

  <export>
  </export>
</package>
