<?xml version="1.0"?>
<package format="2">
  <name>voice</name>
  <version>0.0.0</version>
  <description>The voice package</description>

  <maintainer email="opfer@vs.uni-kassel.de">Stephan Opfer</maintainer>

  <license>GPLv3</license>

  <depend>sound_play</depend>
  <buildtool_depend>catkin</buildtool_depend>


  <export>
  </export>
</package>
